--- a/src/main/res/layout/main.xml
+++ b/src/main/res/layout/main.xml
@@ -10,7 +10,8 @@
 
     <TableLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_weight="0.15">
 
         <TableRow
             android:layout_width="match_parent"
@@ -77,33 +78,57 @@
         </TableRow>
     </TableLayout>
 
-
-
     <RadioGroup
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:weightSum="1">
+        android:layout_height="wrap_content"
+        android:weightSum="1"
+        android:layout_weight="0.75"
+        android:orientation="vertical">
+
         <RadioButton android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/radio1" android:checked="true"
-            android:text="RadioButton1"
-            android:layout_weight="0.1"/>
+            android:text="Off Duty"
+            android:background="@drawable/button_background"
+            android:button="@android:color/transparent"
+            android:layout_weight="0.25"
+            android:layout_marginBottom="10dp"
+            android:gravity="center"
+            android:textSize="25sp"
+            android:textStyle="bold" />
         <RadioButton android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/radio2" android:checked="true"
-            android:text="RadioButton2"
-            android:layout_weight="0.1"/>
+            android:id="@+id/radio2" android:checked="false"
+            android:text="Sleeper Berth"
+            android:background="@drawable/button_background"
+            android:button="@android:color/transparent"
+            android:layout_weight="0.25"
+            android:layout_marginBottom="10dp"
+            android:gravity="center"
+            android:textSize="25sp"
+            android:textStyle="bold"/>
         <RadioButton android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/radio3" android:checked="true"
-            android:text="RadioButton3"
-            android:layout_weight="0.1"/>
+            android:id="@+id/radio3" android:checked="false"
+            android:text="Driving"
+            android:background="@drawable/button_background"
+            android:button="@android:color/transparent"
+            android:layout_weight="0.25"
+            android:layout_marginBottom="10dp"
+            android:gravity="center"
+            android:textSize="25sp"
+            android:textStyle="bold"/>
         <RadioButton android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/radio4" android:checked="true"
-            android:text="RadioButton4"
-            android:layout_weight="0.1"/>
+            android:id="@+id/radio4" android:checked="false"
+            android:text="On-duty Not Driving"
+            android:background="@drawable/button_background"
+            android:button="@android:color/transparent"
+            android:layout_weight="0.25"
+            android:layout_marginBottom="10dp"
+            android:gravity="center"
+            android:textSize="25sp"
+            android:textStyle="bold"/>
 
     </RadioGroup>
 
